--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
               <tbody></tbody>
             </table>
             <a href="#" id="vaciar-carrito" class="button u-full-width btn btn-primary">Vaciar Carrito</a>
+            <a href="#" id="finalizar-compra" class="button u-full-width btn btn-primary">Finalizar Compra</a>
           </div>
         </li>
         <li><a href="https://www.facebook.com" target="__blank"><i class="fab fa-facebook-f"></i></a></li>
@@ -73,7 +74,7 @@
       <div class="welcome-container">
         <h2 class="mb-0">Bienvenidos</h2>
         <h1>Senshi Bjj & Self Defense</h1>
-        <button type="button" class="btn btn-dark">Agenda una Clase</button>
+        <button id="agendar-clase" type="button" class="btn btn-dark">Agenda una Clase</button>
       </div>
     </div>
   </header>
@@ -225,7 +226,7 @@
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-  <script src="/animacion/js/script.js"></script>
+  <script src="/js/script.js"></script>
   <script src="js/app.js"></script>
   
 </body>
