Modificando boton del hero

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="welcome-container">
         <h2 class="mb-0">Bienvenidos</h2>
         <h1>Senshi Bjj & Self Defense</h1>
-        <button id="agendar-clase" type="button" class="btn btn-dark">Agenda una Clase</button>
+        <a href="#programas" id="agendar-clase" type="button" class="btn btn-dark">Agenda una Clase</a>
       </div>
     </div>
   </header>
